Update answer in confidence-intervals.ipynb

--- a/confidence-intervals.ipynb
+++ b/confidence-intervals.ipynb
@@ -8,11 +8,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The mathematics for 1-sided bounds are implemented correctly. Current implementaion of one-sided condifence intervals for both `binomial` and `hypergeometric` distribuion is using the clopper-pearson methods. For one-sided conculation, we only consider one side of the probability distribution, thus `cl = 1 - alpha`. If we are trying to find the lower CI for the given value (p or G), we need to find a $\\hat p$ or $\\hat G$ that has `cumulative P($\\hat p$ or $\\hat G$) < 1 - cl` in the cumulative distribution function of given distribution (`binom.cdf(x - 1, n, q)` or `hypergeom.cdf(x - 1, N, q, n)`). Then the CI of p or G will be [$\\hat p$, 1] or [$\\hat G$, N]. If we are trying to find the upper CI fot the given value (p or G), we need to find a $\\hat p$ or $\\hat G$ that has `cumulative P($\\hat p$ or $\\hat G$)  > cl` in the cumulative distribution function of given distribution (`binom.cdf(x, n, q)` or `hypergeom.cdf(x, N, q, n)`). Then the CI of p or G will be [0, $\\hat p$] or [0, $\\hat G$]."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -24,7 +24,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "For efficiency, the implemented method allow users to set a p or G value. Or they will calculate and narrow the searcing bounds used for optimization, which reduce the searching time and improved the efficiency.\n",
+    "For stability, in both `binomial` and `hypergeometric` functions, `brentq` is used to get the root of the optimiazed function. `brentq` is a fast rppt-finding method compared to `fsolve` or `brenth`. But it only find a zero of the function f on the sign changing interval [a , b], and if the boundary are too small it will not able to find a exact value, given that it will always return 0."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,46 +67,191 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "##### Method = Clopper-Pearson"
+    "from permute.utils import binom_conf_interval, hypergeom_conf_interval\n",
+    "from math import comb\n",
+    "from scipy.stats import binom, hypergeom"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def Expected_Width_binom(n, p, method):\n",
+    "    E = 0\n",
+    "    for x in range(n): \n",
+    "        L, U = binom_conf_interval(n, x, cl=0.95, alternative=\"two-sided\", p=p, method=method)\n",
+    "        E += (U - L) * comb(n, x) * (p ** x) * ((1 - p) **(n - x))\n",
+    "    return E"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Method = Wang"
+    "#### Binomial: for different sets of n and p (Method = Clopper-person and Sterne)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n: 10 p: 0.01\n",
+      "Method: clopper-pearson; Expected width 0.3216924180863416\n",
+      "Method: sterne;          Expected width 0.30576429956745843\n",
+      "n: 10 p: 0.10\n",
+      "Method: clopper-pearson; Expected width 0.42334718180815284\n",
+      "Method: sterne;          Expected width 0.41079816492389964\n",
+      "n: 10 p: 0.20\n",
+      "Method: clopper-pearson; Expected width 0.504839119114195\n",
+      "Method: sterne;          Expected width 0.48119100047359986\n",
+      "n: 10 p: 0.50\n",
+      "Method: clopper-pearson; Expected width 0.5995771255126175\n",
+      "Method: sterne;          Expected width 0.5458818359374995\n",
+      "n: 10 p: 0.90\n",
+      "Method: clopper-pearson; Expected width 0.31578089150939526\n",
+      "Method: sterne;          Expected width 0.30933273888389967\n",
+      "n: 10 p: 0.95\n",
+      "Method: clopper-pearson; Expected width 0.1858308307425528\n",
+      "Method: sterne;          Expected width 0.18410486472992565\n",
+      "n: 10 p: 0.99\n",
+      "Method: clopper-pearson; Expected width 0.042693163582993535\n",
+      "Method: sterne;          Expected width 0.04258911573989701\n",
+      "n: 50 p: 0.01\n",
+      "Method: clopper-pearson; Expected width 0.08755088484825509\n",
+      "Method: sterne;          Expected width 0.08969995854119571\n",
+      "n: 50 p: 0.10\n",
+      "Method: clopper-pearson; Expected width 0.1804883744940915\n",
+      "Method: sterne;          Expected width 0.17357652486863437\n",
+      "n: 50 p: 0.20\n",
+      "Method: clopper-pearson; Expected width 0.2335402325794647\n",
+      "Method: sterne;          Expected width 0.22495382635766945\n",
+      "n: 50 p: 0.50\n",
+      "Method: clopper-pearson; Expected width 0.28677699685004515\n",
+      "Method: sterne;          Expected width 0.27583456745821233\n",
+      "n: 50 p: 0.90\n",
+      "Method: clopper-pearson; Expected width 0.18012182905199567\n",
+      "Method: sterne;          Expected width 0.1731899917280852\n",
+      "n: 50 p: 0.95\n",
+      "Method: clopper-pearson; Expected width 0.13256412242444898\n",
+      "Method: sterne;          Expected width 0.12947030859517616\n",
+      "n: 50 p: 0.99\n",
+      "Method: clopper-pearson; Expected width 0.044521802782276\n",
+      "Method: sterne;          Expected width 0.04432450350588108\n",
+      "n: 100 p: 0.01\n",
+      "Method: clopper-pearson; Expected width 0.052329779174535504\n",
+      "Method: sterne;          Expected width 0.05232496673124241\n",
+      "n: 100 p: 0.10\n",
+      "Method: clopper-pearson; Expected width 0.1256172091175926\n",
+      "Method: sterne;          Expected width 0.12244451195181384\n",
+      "n: 100 p: 0.20\n",
+      "Method: clopper-pearson; Expected width 0.16398441927780846\n",
+      "Method: sterne;          Expected width 0.16019608947835698\n",
+      "n: 100 p: 0.50\n",
+      "Method: clopper-pearson; Expected width 0.20239474416951278\n",
+      "Method: sterne;          Expected width 0.19837928462587695\n",
+      "n: 100 p: 0.90\n",
+      "Method: clopper-pearson; Expected width 0.12561624715157094\n",
+      "Method: sterne;          Expected width 0.12244350261865583\n",
+      "n: 100 p: 0.95\n",
+      "Method: clopper-pearson; Expected width 0.09403073470406517\n",
+      "Method: sterne;          Expected width 0.09130844923245073\n",
+      "n: 100 p: 0.99\n",
+      "Method: clopper-pearson; Expected width 0.039073298372450396\n",
+      "Method: sterne;          Expected width 0.03841573776286014\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in [10, 50, 100]:\n",
+    "    for p in [0.01, 0.1, 0.2, 0.5, 0.9, 0.95, 0.99]:\n",
+    "        print(f'n: {n:.0f} p: {p:.2f}')\n",
+    "        Expected_c = Expected_Width_binom(n, p, 'clopper-pearson')\n",
+    "        print('Method: clopper-pearson; Expected width', Expected_c)\n",
+    "        Expected_s = Expected_Width_binom(n, p, 'sterne')\n",
+    "        print('Method: sterne;          Expected width', Expected_s)\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Method = Sterne"
+    "#### Hypergeometric: for different sets of N, G and n (Method = Clopper-person, Sterne and Wang)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def Expected_Width_hypergeom(N, G, n, method):\n",
+    "    E = 0\n",
+    "    for x in range(n): \n",
+    "        L, U = hypergeom_conf_interval(n, x, N, cl=0.95, alternative=\"two-sided\", G=G, method=method)\n",
+    "        E += (U - L) * hypergeom.pmf(x, N, G, N)\n",
+    "    return E"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N: 20 n: 10 G: 4\n",
+      "Method: clopper-pearson; Expected width 9.0\n",
+      "Method: sterne;          Expected width 10.0\n",
+      "Method: wang;            Expected width 7.0\n",
+      "N: 20 n: 10 G: 5\n",
+      "Method: clopper-pearson; Expected width 8.0\n",
+      "Method: sterne;          Expected width 10.0\n",
+      "Method: wang;            Expected width 8.0\n",
+      "N: 20 n: 10 G: 6\n",
+      "Method: clopper-pearson; Expected width 8.0\n",
+      "Method: sterne;          Expected width 10.0\n",
+      "Method: wang;            Expected width 7.0\n",
+      "N: 20 n: 14 G: 4\n",
+      "Method: clopper-pearson; Expected width 5.0\n",
+      "Method: sterne;          Expected width 6.0\n",
+      "Method: wang;            Expected width 4.0\n",
+      "N: 20 n: 14 G: 5\n",
+      "Method: clopper-pearson; Expected width 5.0\n",
+      "Method: sterne;          Expected width 7.0\n",
+      "Method: wang;            Expected width 5.0\n",
+      "N: 20 n: 14 G: 6\n",
+      "Method: clopper-pearson; Expected width 5.0\n",
+      "Method: sterne;          Expected width 7.0\n",
+      "Method: wang;            Expected width 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 20\n",
+    "for n in [10, 14]:\n",
+    "    for G in [4, 5, 6]:\n",
+    "        print(f'N: {N:.0f} n: {n:.0f} G: {G:.0f}')\n",
+    "        Expected_c = Expected_Width_hypergeom(N, G, n, 'clopper-pearson')\n",
+    "        print('Method: clopper-pearson; Expected width', Expected_c)\n",
+    "        Expected_s = Expected_Width_hypergeom(N, G, n, 'sterne')\n",
+    "        print('Method: sterne;          Expected width', Expected_s)\n",
+    "        Expected_w = Expected_Width_hypergeom(N, G, n, 'wang')\n",
+    "        print('Method: wang;            Expected width', Expected_w)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,9 +264,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clopper-Pearson ensures that the tails are of equal size. In Sterne's tails, they may be of different sizes, and create a potentially tighter confidence interval than Clopper-Pearson.\n",
+    "Clopper-Pearson ensures that the tails are of equal size. In Sterne's tails, they may be of different sizes, and create a potentially tighter confidence interval than Clopper-Pearson. Same for Wang's method, it offered an even tighter condidence interval but with even tails.\n",
     "\n",
-    "THIS NEEDS MORE"
+    "For the runnning time, when N is small (around < 20), both clopper-pearson and sterne method get the confidence interval in a short time. However for wang method, it tooks longer time to finishing calculating. But when N getting bigger (around > 200), clopper-person took the shortest time to finish followed by sterne and wang. Expecially, Wang took more than a minute to finish.\n"
    ]
   },
   {
@@ -126,6 +274,13 @@
    "metadata": {},
    "source": [
     "#### Which would you recommend, and why? If you would recommend one method over the other in some circumstances but not in others, explain why."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For smaller population, I would recommend method `sterne` and `wang`, because it has narrower estimation of the confidence inteval. But, if we have larger population, `clopper-person` will be preferable given that it can finish in a short time and offer a relatively correct confidence interval. But, if prefered a narrower CI, `wang` method should be the first choice."
    ]
   },
   {
@@ -152,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
