--- a/confidence-intervals.ipynb
+++ b/confidence-intervals.ipynb
@@ -284,6 +284,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Style Checks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "pip install pep257\n",
+    "\n",
+    "pycodestyle permute/utils.py \n",
+    "pep257 permute/utils.py \n",
+    "pycodestyle permute/tests/test_utils.py \n",
+    "pep257 permute/tests/test_utils.py "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -307,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
